added: auth middleware

--- a/app/views/home/login.hbs
+++ b/app/views/home/login.hbs
@@ -23,7 +23,7 @@
                             </div>
                             <div class="col">
                                 <input type="text" class="form-control form-control-sm" 
-                                    name="username" value="admin" placeholder="Login" />
+                                    name="username" value="" placeholder="Login" />
                             </div>
                         </div>    
                         <div class="row">
@@ -32,7 +32,7 @@
                             </div>
                             <div class="col">
                                 <input type="password" class="form-control form-control-sm" 
-                                    name="password" value="admin" placeholder="Password" />
+                                    name="password" value="" placeholder="Password" />
                             </div>
                         </div>
                     </div>
