--- a/app/views/lots/create.hbs
+++ b/app/views/lots/create.hbs
@@ -78,11 +78,34 @@
                             </div>
                             <div class="row mb-3">
                                 <div class="col-4">
+                                    <label for="state" class="form-label">Condition</label>
+                                </div>
+                                <div class="col">
+                                    <select class="form-select form-select-sm" id="state" name="state">
+                                        {{#each states }}
+                                            <option value="{{ this.dataValues.title }}">
+                                                {{ this.dataValues.title }}
+                                            </option>
+                                        {{/each}}
+                                    </select>
+                                </div>
+                            </div>    
+                            <div class="row mb-3">
+                                <div class="col-4">
                                     <label for="year" class="form-label small">Year</label>
                                 </div>
                                 <div class="col">
                                     <input type="text" class="form-control form-control-sm form-input-number-required" id="year" 
                                         name="year" />
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col-4">
+                                    <label for="mileage" class="form-label">Mileage</label>
+                                </div>
+                                <div class="col">
+                                    <input type="number" class="form-control form-control-sm" id="mileage" 
+                                        name="mileage" />
                                 </div>
                             </div>
                             <div class="row mb-3">
@@ -139,6 +162,19 @@
                             </div>
                             <div class="row mb-3">
                                 <div class="col-4">
+                                    <label for="transmission" class="form-label">Transmission</label>
+                                </div>
+                                <div class="col">
+                                    <select class="form-select form-select-sm" id="transmission" name="transmission">
+                                        <option value="">Select...</option>
+                                        {{#each transmissions }}
+                                            <option value="{{ this.dataValues.title }}">{{ this.dataValues.title }}</option>
+                                        {{/each}}
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col-4">
                                     <label for="fuel_type" class="form-label">Fuel type</label>
                                 </div>
                                 <div class="col">
@@ -150,6 +186,24 @@
                                             </option>
                                         {{/each}}
                                     </select>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col-5">
+                                    <label for="mpg_city" class="form-label">City gas mileage</label>
+                                </div>
+                                <div class="col">
+                                    <input type="number" class="form-control form-control-sm" id="mpg_city" 
+                                        name="mpg_city" />
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col-5">
+                                    <label for="mpg_highway" class="form-label">Highway gas mileage</label>
+                                </div>
+                                <div class="col">
+                                    <input type="number" class="form-control form-control-sm" id="mpg_highway" 
+                                        name="mpg_highway" />
                                 </div>
                             </div>
                             <div class="row mb-3">
@@ -178,6 +232,19 @@
                                             <option value="{{ this.dataValues.title }}">
                                                 {{ this.dataValues.title }}
                                             </option>
+                                        {{/each}}
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col-4">
+                                    <label for="doors" class="form-label">Doors</label>
+                                </div>
+                                <div class="col">
+                                    <select class="form-select form-select-sm" id="doors" name="doors">
+                                        <option value="">Select...</option>
+                                        {{#each doors }}
+                                            <option value="{{ this.dataValues.title }}">{{ this.dataValues.title }}</option>
                                         {{/each}}
                                     </select>
                                 </div>
